# claude-project-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
docs/diagrams/: mermaid.md  overview.excalidraw
plugins/claude-helper/: README.md
plugins/claude-helper/.claude-plugin/: plugin.json
plugins/claude-helper/skills/resume-review/: SKILL.md
plugins/claude-helper/skills/review-agent/: SKILL.md
plugins/claude-helper/skills/review-all/: SKILL.md
plugins/claude-helper/skills/review-skill/: SKILL.md
plugins/claude-helper/skills/review-to-todo/: SKILL.md
plugins/perms/: .mcp.json  CHANGELOG.md  README.md
plugins/perms/.claude-plugin/: plugin.json
plugins/perms/server/: .pre-commit-config.yaml  pyproject.toml
plugins/perms/server/server/: main.py
plugins/perms/server/server/lib/: models.py  storage.py
plugins/perms/server/server/tools/: settings.py
plugins/perms/server/tests/: conftest.py  test_server_structure.py  test_settings_tools.py  test_storage.py
plugins/proj/: .mcp.json  CHANGELOG.md  README.md
plugins/proj/.claude-plugin/: plugin.json
plugins/proj/hooks/: README.md  hooks.json
plugins/proj/server/: justfile  pyproject.toml
plugins/proj/server/server/: cli.py  main.py
plugins/proj/server/server/lib/: agents.py  enums.py  ids.py  ids.py,cover  models.py  models.py,cover  perms_helpers.py  state.py  state.py,cover  storage.py  storage.py,cover  tracking_git.py  zoxide.py
plugins/proj/server/server/tools/: agents.py  config.py  config.py,cover  content.py  content.py,cover  context.py  context.py,cover  explore.py  git.py  git.py,cover  migrate.py  migrate.py,cover  perms_grant.py  perms_sync.py  perms_sync.py,cover  projects.py  projects.py,cover  templates.py,cover  todoist_sync.py  todos.py  todos.py,cover  tracking_git.py
plugins/proj/server/tests/: conftest.py  test_agents_lib.py  test_agents_storage.py  test_agents_tools.py  test_cli.py  test_config.py  test_explore.py  test_extract_todos.py  test_find_archived.py  test_hooks_schema.py  test_load.py  test_mcp_edge_cases.py  test_mcp_tools.py  test_migrate.py  test_migrate_dirs.py  test_models.py  test_perms_grant.py  test_perms_sync.py  test_projects.py  test_purge.py  test_session_hook_edge_cases.py  test_storage.py  test_todo_context.py  test_todoist_sync.py  test_todos.py  test_tools_integration.py  test_tracking_git.py  test_tracking_git_tool.py  test_zoxide.py
plugins/proj/skills/add-repo/: SKILL.md
plugins/proj/skills/agents-create-decompose/: SKILL.md
plugins/proj/skills/agents-create-define/: SKILL.md
plugins/worktree/: .mcp.json  CHANGELOG.md  README.md
plugins/worktree/.claude-plugin/: plugin.json
plugins/worktree/server/: pyproject.toml
(+54 files in other folders)
